--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,15 @@ h2,
 h3 {
   font-family: 'Montserrat', sans-serif;
 }
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+a:hover,
+a:focus,
+a:visited {
+  color: inherit;
+  text-decoration: none;
+}
