--- a/src/components/Ebook/Ebook.css
+++ b/src/components/Ebook/Ebook.css
@@ -23,6 +23,7 @@
   flex-direction: column;
   gap: 20px;
   width: 100%;
+  align-items: stretch; /* garante altura igual no mobile também */
 }
 
 .ebook-card {
@@ -34,7 +35,9 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
+  justify-content: space-between;
   align-items: center;
+  height: 100%;
 }
 
 .ebook-card img {
@@ -97,9 +100,33 @@
 @media (min-width: 768px) {
   .ebook-cards {
     flex-direction: row;
+    align-items: stretch;
+  }
+
+  .ebook-card {
+    flex: 1;
+    min-height: 550px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .ebook-card img {
+    height: 200px;
+    object-fit: cover;
+  }
+
+  .ebook-content-wrapper {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    justify-content: flex-start;
+    margin-top: 12px;
   }
 
   .ebook-btn {
+    margin-top: 20px;
     width: auto;
   }
 }
