--- a/src/components/Mentorship/Mentorship.css
+++ b/src/components/Mentorship/Mentorship.css
@@ -100,6 +100,34 @@
   transform: scale(0.98);
 }
 
+.online-therapy {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.online-therapy-btn {
+  background-color: #e69500;
+  border-radius: 10px;
+  padding: 12px 25px;
+  color: white;
+  font-weight: bold;
+  font-size: 1rem;
+  text-decoration: none;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.online-therapy-btn:hover {
+  background-color: #e69500;
+  transform: scale(1.03);
+}
+
+.online-therapy-btn:active {
+  background-color: #e69500;
+  transform: scale(0.98);
+}
+
+
 /* Responsivo */
 @media (min-width: 768px) {
   .mentoria-top {
